--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
         "esbuild": "^0.18.15",
         "prettier": "3.0.0",
         "typescript": "^5.1.6",
-        "ultimate-crosscode-typedefs": "github:krypciak/ultimate-crosscode-typedefs"
-    },
-    "dependencies": {
+        "ultimate-crosscode-typedefs": "github:krypciak/ultimate-crosscode-typedefs",
         "fuse.js": "^6.6.2"
     }
 }
