--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cc-vim",
     "version": "1.1.0",
-    "description": "",
+    "description": "Adds a popup command prompt",
     "scripts": {
         "start": "esbuild --target=es2018 --format=esm --platform=node --bundle --sourcemap=inline --outfile=plugin.js src/plugin.ts",
         "watch": "esbuild --target=es2018 --format=esm --platform=node --bundle --sourcemap=inline --watch --outfile=plugin.js src/plugin.ts"
