--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "author": "krypek",
     "license": "GNU GPLv3",
+    "homepage": "https://github.com/krypciak/cc-vim",
     "devDependencies": {
         "@types/node": "^20.4.4",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
