--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "krypek",
     "license": "GNU GPLv3",
     "homepage": "https://github.com/krypciak/cc-vim",
+    "types": "src/global.d.ts",
     "devDependencies": {
         "@types/node": "^20.4.4",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
