--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -19,4 +19,4 @@ jobs:
               run: sudo apt update; sudo apt install npm
 
             - name: Compile
-              run: npm install; npm run build
+              run: npm install; npm run start
