--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
         "fuse.js": "^6.6.2",
         "prettier": "3.0.0",
         "typescript": "^5.1.6",
-        "ultimate-crosscode-typedefs": "github:krypciak/ultimate-crosscode-typedefs"
-    },
-    "dependencies": {
+        "ultimate-crosscode-typedefs": "github:krypciak/ultimate-crosscode-typedefs",
         "cc-quick-menu-ext": "github:krypciak/cc-quick-menu-ext"
     }
 }
