--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
         "prettier": "3.0.0",
         "typescript": "^5.1.6",
         "ultimate-crosscode-typedefs": "github:krypciak/ultimate-crosscode-typedefs",
-        "cc-quick-menu-ext": "github:krypciak/cc-quick-menu-ext"
+        "cc-diorbital-menu": "github:krypciak/cc-diorbital-menu"
     }
 }
