--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
         "@typescript-eslint/parser": "^6.2.0",
         "esbuild": "^0.18.15",
         "fuse.js": "^6.6.2",
+        "nax-ccuilib": "github:krypciak/nax-ccuilib",
         "prettier": "3.0.0",
         "typescript": "^5.1.6",
-        "ultimate-crosscode-typedefs": "github:krypciak/ultimate-crosscode-typedefs",
-        "cc-diorbital-menu": "github:krypciak/cc-diorbital-menu"
+        "ultimate-crosscode-typedefs": "github:krypciak/ultimate-crosscode-typedefs"
     }
 }
