--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "homepage": "https://github.com/krypciak/cc-vim",
     "types": "src/global.d.ts",
     "devDependencies": {
+        "@types/jquery": "^3.5.29",
         "@types/node": "^20.4.4",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
