Move all mod options to CCModManager

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/node": "^20.4.4",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
+        "ccmodmanager": "github:CCDirectLink/CCModManager",
         "esbuild": "^0.18.15",
         "fuse.js": "^6.6.2",
         "nax-ccuilib": "github:krypciak/nax-ccuilib",
